# creatr-choice

./: .dockerignore  .env.example  .gitignore  CHANGES_AVG_VIEWS.md  DOCKER.md  Dockerfile  README.md  TEST_ANALYSIS.md  docker-compose.override.yml.example  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: GITHUB_ACTIONS.md  README.md  cd-azure-container-apps.yml  cd-azure-container-instances.yml  ci.yml  deploy.yml  docker-build-push.yml
app/: __init__.py
app/config/: infl-data-sheet.json  scoring_config.py
app/core/: config.py  constants.py  embeddings.py  logging_config.py
app/db/: azure_search_store.py  cosmos_db.py  mongodb_reader.py  redis.py
app/models/: __init__.py  brand.py  brand_collaboration.py  categories.py  chat.py  conversation.py  free_influencer.py  influencer.py  influencer_data.py  (+2 more)
docs/: API_DOCUMENTATION.md  API_EXAMPLES.md  ARCHITECTURE_FLOW.md  CONVERSATIONAL_SEARCH.md  DOCKER_COMPOSE.md  README.md  SETUP.md  VM_DEPLOYMENT.md
scraped_data/: brand_scrape_caratlane_2026-01-23T21-32-00.xlsx
scripts/: brand_pipeline.py  check_setup.py  create_search_index.py  generate_embeddings.py  migrate_to_cosmos.py  monitor_embeddings.py  process_brand_collaborations.py  process_free_influencers.py  remove_embeddings_from_cosmos.py  run_and_analyze_conversational_test.py  setup_complete.py  setup_vm.sh  sync_brand_influencers.py  test_conversational_search.py  test_conversational_search_api.py  test_conversational_search_simple.py  test_embedding_generation.py  verify_embeddings.py  worker.py
(+38 files in other folders)
